# lib/controller/domestic_controller.rb
@@ -15,6 +15,7 @@ module Controller
         council: params[:council],
         constituency: params[:constituency],
         postcode: params[:postcode],
+        uprn: params[:uprn],
         eff_rating: params[:eff_rating],
         assessment_type: %w[SAP RdSAP],
         address: params[:address],
@@ -35,8 +36,11 @@ module Controller
     rescue Boundary::InvalidArgument
       includes_today_error = "The search query was invalid - the date cannot include today"
       json_api_response code: 400, data: { error: includes_today_error }
+    rescue Boundary::InvalidArgumentType
+      uprn_invalid_type_error = "The search query was invalid - the uprn should be an integer"
+      json_api_response code: 400, data: { error: uprn_invalid_type_error }
     rescue Errors::PostcodeNotValid
-      postcode_invalid_error = "The search query was invalid - please prove a valid postcode"
+      postcode_invalid_error = "The search query was invalid - please provide a valid postcode"
       json_api_response code: 400, data: { error: postcode_invalid_error }
     rescue Errors::CouncilNotFound
       council_not_found_error = "The search query was invalid - provide valid council name(s)"
